tests/specs/ecosystem/sakumyz/crypto_shield/1_0_1.test
sakumyz/crypto-shield/1.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2580 [ERROR]: Cannot find name 'Buffer'.
const initVector: Buffer = {} as never;
                  ~~~~~~
    at file://<tmpdir>/src/commands/cs.ts:3:19

TS2580 [ERROR]: Cannot find name 'Buffer'.
const secretKey: Buffer = {} as never;
                 ~~~~~~
    at file://<tmpdir>/src/commands/cs.ts:4:18

Found 2 errors.

